--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "express": "^4.0.0",
     "morgan": "~1.0.0",
-    "jade": "~1.3.1"
+    "jade": "~1.3.1",
+    "body-parser": "^1.0.1",
+    "mongoose": "^3.8.8"
   }
 }
