--- a/package.json
+++ b/package.json
@@ -15,5 +15,15 @@
     "jade": "~1.3.1",
     "body-parser": "^1.0.1",
     "mongoose": "^3.8.8"
+  },
+  "devDependencies": {
+    "grunt-rsync": "~0.2.1",
+    "grunt-contrib-watch": "~0.5.3",
+    "matchdep": "~0.3.0",
+    "grunt": "~0.4.1",
+    "grunt-autoprefixer": "~0.6.5",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-connect": "^0.7.0",
+    "grunt-sass": "^0.11.0"
   }
 }
